Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-36381

Comment "Procedure of keys generation ..." is in the wrong place

    XMLWordPrintable

Details

    Description

      In current code, we have in table.cc:

      /*
        Procedure of keys generation for result tables of materialized derived
        tables/views.
       
        A key is generated for each equi-join pair derived table-another table.
      ...
      */
      

      /*
        @brief
        Change references to underlying items of a merged derived table/view
        for fields in derived table's result table.
       
        @return FALSE ok
        @return TRUE  Out of memory
      */
      bool TABLE_LIST::change_refs_to_fields()
      

      The first comment is out of place.
      It should have been at sql_select.cc, generate_derived_keys().

      The comment was added in this commit:

      commit 709a0a131021135e9fb7a2095fcfcbc223dfb126
      Author: Igor Babaev <igor@askmonty.org>
      Date:   Wed May 26 13:18:18 2010 -0700
       
          MWL#106: Backport optimizations for derived tables and views.
          The main consolidated patch.
      
      

      generate_derived_keys() was also introduced in the same commit.

      Attachments

        Activity

          People

            psergei Sergei Petrunia
            psergei Sergei Petrunia
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 0.5h
                0.5h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.