MDEV-36381: Comment "Procedure of keys generation ..." is in the wrong place

Move it from the middle of table.cc to sql_select.cc:generate_derived_keys()